fix: gapcursor,  change horizontal line to vertical line

--- a/apps/demo/src/components/Editor/EditorContent.less
+++ b/apps/demo/src/components/Editor/EditorContent.less
@@ -572,10 +572,10 @@
     &::after {
       content: '';
       display: block;
-      position: absolute;
-      top: -2px;
-      width: 20px;
-      border-top: 1px solid @text-color;
+      position: relative;
+      width: 0px;
+      height: 22px;
+      border-left: 1px solid @text-color;
       animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
     }
   }
@@ -600,6 +600,7 @@
 
   .ProseMirror-focused .ProseMirror-gapcursor {
     display: block;
+    position: relative;
   }
 
   .ProseMirror-focused .placeholder::before {
